Fixed menu overlapping bug

--- a/resources/sass/partials/builder/_builder.scss
+++ b/resources/sass/partials/builder/_builder.scss
@@ -38,10 +38,11 @@ $topping-selectors-height : 24px;
   width         : 90%;
 
   select {
-    width : 100%;
+    width: 32.5%;
 
     @media #{$query-phones} {
       display : block;
+      width: 100%;
     }
   }
 
